<resources>
    <string name="app_name">Restaurant</string>
    <string name="login">Log in</string>
    <string name="login_u"><u>Log in</u></string>
    <string name="email">Email</string>
    <string name="email_u"><u>Email</u></string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Log out</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forget_password">Forgot Password</string>
    <string name="provide_email_reset_pass">Provide your account\'s email for which you want to reset your password</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">Back</string>
    <string name="login_as_administrator">Login as Administrator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="username_u"><u>Username</u></string>
    <string name="sign_up_u"><u>Sign up</u></string>
    <string name="sign_up">Sign up</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_number_u"><u>Phone Number</u></string>
    <string name="gender">Gender</string>
    <string name="gender_u"><u>Gender</u></string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="role">Role</string>
    <string name="role_u"><u>Role</u></string>
    <string name="re_enter_password">re-enter password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="by_creating_account_you_are_accepting">By creating account, you are accepting <u><![CDATA[terms & conditions]]></u></string>
    <string name="terms_amp_conditions"><u><![CDATA[terms & conditions]]></u></string>
    <!-- Facebook Authentication -->
    <string name="facebook_app_id">333416469474965</string>
    <string name="fb_login_protocol_scheme">fb333416469474965</string>
    <string name="facebook_client_token">8a02350a1d3fdbf1bc12520e1bd5cabb</string>
    <string name="enter">Enter</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="staffs">Staffs</string>
    <string name="customers">Customers</string>
    <string name="menu">Menu</string>
    <string name="tables">Tables</string>
    <string name="reports">Reports</string>
    <string name="sales">Sales</string>
    <string name="account">Account</string>
    <string name="employee">Employee</string>
    <string name="waiter">Waiter</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="done">Done</string>
    <string name="new_account">New Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="customer">Customer</string>
    <string name="save">Save</string>
    <string name="payment">Payment</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="message">Message</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title">Title</string>
    <string name="sender">Sender</string>
    <string name="date">Date</string>
    <string name="content">Content</string>
    <string name="reviews">Reviews</string>
    <string name="review">Review</string>
    <string name="email_address">Email Address</string>
    <string name="save_changes">Save Changes</string>
    <string name="type">Type</string>
    <string name="cost">Cost</string>
    <string name="selling_price">Selling Price</string>
    <string name="ingredients">Ingredients</string>
    <string name="description">Description</string>
    <string name="add_new_dish">Add New Dish</string>
    <string name="image">Image</string>
    <string name="salad">Salad</string>
    <string name="drink">Drink</string>
    <string name="pizza">Pizza</string>
    <string name="dessert">Dessert</string>
    <string name="pasta">Pasta</string>
    <string name="burgers">Burgers</string>
    <string name="food_types">Food types</string>
    <string name="sale">Sale</string>
    <string name="bill">Bill</string>
    <string name="staffs_toolbar">Staffs Toolbar</string>
    <string name="freesprite_restaurant">FreeSprite Restaurant</string>
    <string name="_1">1</string>
    <string name="available">Available</string>
    <string name="booked">Booked</string>
    <string name="in_use">In use</string>
    <string name="other">Other</string>
    <string name="time">Time</string>
    <string name="reserve">Reserve</string>
</resources>