<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditStaffsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <include layout="@layout/admin_toolbar" />

            <TextView
                android:layout_marginTop="40dp"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editStaffsName"
                android:inputType="textPersonName"
                android:background="@drawable/round_corner_box_bg_design"
                android:paddingHorizontal="10dp"
                android:layout_marginBottom="5dp"
                android:importantForAutofill="no"
                android:layout_width="310dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editStaffsEmail"
                android:inputType="textEmailAddress"
                android:background="@drawable/round_corner_box_bg_design"
                android:layout_marginBottom="5dp"
                android:importantForAutofill="no"
                android:paddingHorizontal="10dp"
                android:layout_width="310dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/phone_number"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editStaffsPhone"
                android:inputType="phone"
                android:background="@drawable/round_corner_box_bg_design"
                android:layout_marginBottom="5dp"
                android:importantForAutofill="no"
                android:paddingHorizontal="10dp"
                android:layout_width="310dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/gender"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/editStaffsGender"
                android:layout_width="310dp"
                android:layout_height="35dp"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:weightSum="4"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/editStaffsMale"
                    android:text="@string/male"
                    android:textColor="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/editStaffsFemale"
                    android:text="@string/female"
                    android:textColor="@color/grey"
                    android:layout_weight="1"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/role"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editStaffsRole"
                android:inputType="text"
                android:background="@drawable/round_corner_box_bg_design"
                android:layout_marginBottom="5dp"
                android:importantForAutofill="no"
                android:paddingHorizontal="10dp"
                android:layout_width="310dp"
                android:layout_height="40dp" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/username"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/editStaffsUsername"
                android:inputType="text"
                android:background="@drawable/round_corner_box_bg_design"
                android:layout_marginBottom="5dp"
                android:importantForAutofill="no"
                android:paddingHorizontal="10dp"
                android:layout_width="310dp"
                android:layout_height="40dp" />

            <Button
                android:layout_marginTop="30dp"
                android:id="@+id/btn_edit_staff_done"
                android:text="@string/done"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/roboto"
                android:textSize="24sp"
                android:layout_width="310dp"
                android:layout_height="50dp" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>