<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_marginTop="-30dp"
                android:scaleType="centerCrop"
                android:src="@drawable/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-50dp"
                android:gravity="center"
                android:text="@string/sign_up"
                android:textColor="@color/orange"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/name"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_corner_box_bg_design"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:paddingHorizontal="10dp" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/email"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_corner_box_bg_design"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="10dp" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/phone_number"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:layout_marginBottom="5dp"
                android:background="@drawable/round_corner_box_bg_design"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:paddingHorizontal="10dp" />

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/gender"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="310dp"
                android:layout_height="35dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="4">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"
                    android:textColor="@color/grey" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"
                    android:textColor="@color/grey" />
            </RadioGroup>

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="310dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_corner_box_bg_design"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:paddingHorizontal="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/re_enter_password"
                android:textAllCaps="true"
                android:textColor="@color/grey"
                android:textSize="15sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/retypePassword"
                    android:layout_width="310dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/round_corner_box_bg_design"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:paddingHorizontal="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/TOS"
                android:layout_width="310dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/by_creating_account_you_are_accepting" />

            <Button
                android:id="@+id/btn_register"
                android:layout_width="310dp"
                android:layout_height="50dp"
                android:backgroundTint="@color/orange"
                android:fontFamily="@font/roboto"
                android:text="@string/sign_up"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account"
                    android:textColor="@color/grey"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/loginNow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/login_u"
                    android:textColor="@color/orange"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>