<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Login">

    <ImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="-50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/orange"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@color/grey"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/box_bg_design"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/password"
        android:textAllCaps="true"
        android:textColor="@color/grey"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/box_bg_design"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto"
        android:text="@string/forgot_password"
        android:textAlignment="textEnd"
        android:textColor="@color/orange"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/orange"
        android:text="@string/login"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Don't have an account? "
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/registerNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_u"
            android:textColor="@color/orange"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="Or sign in as"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/fb_login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/blue" />

</LinearLayout>