<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ForgotPasswordActivity">

    <ImageView
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginTop="-80dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/roboto"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textAllCaps="true"
        android:textColor="@color/orange"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:fontFamily="@font/roboto"
        android:text="@string/email"
        android:textAllCaps="true"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editForgotPasswordEmail"
        android:layout_width="310dp"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/round_corner_box_bg_design"
        android:fontFamily="@font/roboto"
        android:hint="Enter your email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/orange"
        android:fontFamily="@font/roboto"
        android:text="@string/enter"
        android:textColor="#FFFFFF"
        android:textSize="24sp" />

</LinearLayout>